# TRACELESS

./: .gitignore  .package-lock.json  README.md  README.zh-CN.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
TRACELESS/: .gitignore  .prettierignore  index.html  package-lock.json  package.json  tailwind.config.js
TRACELESS/.github/workflows/: release.yml
TRACELESS/license-generator/: package-lock.json  package.json  vite.config.ts
TRACELESS/license-generator/src/: App.css  App.tsx  index.css
TRACELESS/license-generator/src-tauri/: Cargo.toml  tauri.conf.json
TRACELESS/license-generator/src-tauri/icons/: icon.icns
TRACELESS/license-generator/src-tauri/src/: generator.rs  main.rs
TRACELESS/src/: index.css
TRACELESS/src-tauri/: Cargo.toml  entitlements.plist
TRACELESS/src-tauri/icons/: icon.icns
TRACELESS/src-tauri/src/: main.rs
TRACELESS/src-tauri/src/commands/: cleanup_ops.rs  license_ops.rs  memory_ops.rs  scan_ops.rs  scheduled_ops.rs  settings_ops.rs  system_info_ops.rs
TRACELESS/src-tauri/src/modules/: anti_analysis.rs  dry_run.rs  log_cleaner.rs  mod.rs  network_cleaner.rs  permission.rs  settings_storage.rs  system_info.rs  timeout_handler.rs  timestamp_modifier.rs
TRACELESS/src-tauri/tests/: secure_delete_tests.rs  settings_tests.rs
TRACELESS/src-tauri/tests/common/: mod.rs
TRACELESS/src/components/: AboutDialog.tsx  LanguageSwitcher.tsx  LicenseActivation.tsx  PermissionGuide.tsx  ProFeatureGate.tsx
TRACELESS/src/config/: supabase.ts
TRACELESS/src/contexts/: LicenseContext.tsx  SettingsContext.tsx
TRACELESS/src/pages/: AntiAnalysis.tsx  Dashboard.tsx  DiskEncryption.tsx  FileCleanup.tsx  MemoryCleanup.tsx  RegistryCleanup.tsx
TRACELESS/src/test/: commands.test.ts  settings.test.ts  validation.test.ts
TRACELESS/supabase/: schema.sql
docs/: index.html  index.zh-CN.html
license-generator/: index.html  package.json  vite.config.ts
license-generator/src/: App.css  App.tsx
license-generator/src-tauri/: tauri.conf.json
scripts/: build.bat  build.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/tests/: path_validator_tests.rs
src/components/: PermissionDialog.tsx
src/config/: supabase.ts
src/i18n/: config.ts
src/pages/: MemoryCleanup.tsx  NetworkCleanup.tsx  ScanPage.tsx  Settings.tsx  SystemLogs.tsx  TimestampModifier.tsx
src/test/: i18n.test.ts  setup.ts
src/utils/: security.ts
supabase/: schema.sql
(+48 files in other folders)
