[package]
name = "wuhen"
version = "0.1.0"
description = "无痕 - Traceless Protection Tool"
authors = ["Security Research Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
rand = "0.8"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
once_cell = "1.19"
scopeguard = "1.2"
shellexpand = "3.1"
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
zeroize = { version = "1.7", features = ["derive"] }
rayon = "1.10"
num_cpus = "1.16"
glob = "0.3"
regex = "1.10"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_EventLog",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_DataExchange",
    "Win32_Security",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs"] }
filetime = "0.2"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"
core-foundation = "0.9"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3.10"
